# holographic-field-theory

./: .gitignore  CHFT_Technical_Paper_v1.md  CHFT_Technical_Paper_v1_EN.md  README.md  Understanding PyTorch Load Warning.md  checklisttest.md  chft_v2_benchmark.ipynb  findings-2026-05-30.md  findings-3-2026-05-30.md  handoff-2026-06-01.md  interact.py  llm-benchmarks.md  main.py  pyproject.toml  roadmap.md  run_chft_experiment.ipynb  run_colab_export.py  train_transformer.py  update_notebook.py  vocab.json
.codanna/index/tantivy/: meta.json
ChatHistory/: CjhatHistory-2.md
Findings/: findings-2-2026-05-30.md  findings-3-2026-05-30.md  findings-4-2026-06-01.md  findings-5-2026-06-01.md  findings-6-2026-06-01.md  findings-7-2026-06-01.md  findings-8-2026-06-01.md
bechmarks/: fast-benchmarks-1k.md  llm-benchmarks.md
colab/: chft_v2_benchmark.ipynb
colab/src/: __init__.py  evaluate.py  generate.py  model.py  save.py  train.py  transformer_baseline.py
docs/: CHFT_Paradigm_and_Roadmap.md  roadmap.md
docs/archive/: propuesta.md  propuesta2.md  propuesta_v4.md  reference-2026-05-31.md
