[project]
name = "01-chft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "geoopt>=0.5.1",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "rouge-score>=0.1.2",
    "scipy>=1.17.1",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torch-hd>=5.8.4",
]
